--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -36,9 +36,11 @@
                                     <div id="list-eps" class="overflow-auto" style="height: 550px;">
                                         <% episodes.forEach(episode=> { %>
                                             <a href="javascript:void(0)" class="btn btn-warning my-2 d-block"
-                                                data-movie="<%- movie.idMovie %>" data-episode="<%- episode.Episode %> "
+                                                data-episode="<%- episode.episode %>" data-hls="<%- episode.hls %>"
+                                                data-id="<%- episode.id %>"
+                                                data-links='<%- JSON.stringify(episode.Links) %>'
                                                 onclick="getFullLink(this)">
-                                                <%- episode.Episode %>
+                                                <%- episode.episode %>
                                             </a>
                                             <% }); %>
                                     </div>
@@ -48,17 +50,18 @@
                                 </div>
                                 <div style="min-width: 80%; padding-left: 1rem;">
                                     <h3 class="text-center">
-                                        <%- movie.Name %>
+                                        <%- movie.name %>
                                     </h3>
-                                    <input type="hidden" value="<%- movie.idMovie %>" id="idMovie">
+                                    <input type="hidden" value="<%- movie.id %>" id="idMovie">
                                     <hr>
                                     <div id="episode-detail" class="w-100 d-flex" style="display: none !important;">
                                         <div style="width: 60%;">
                                             <div>
-                                                <iframe frameborder="0" class="w-100" style="height: 400px;"
-                                                    id="player"></iframe>
+                                                <iframe frameborder="0" class="w-100"
+                                                    style="height: 400px; display: none;" id="player"></iframe>
+                                                <div id="mediaplayer" style="display: none;"></div>
                                             </div>
-                                            <div id="list-link"></div>
+                                            <div id="list-link" class="mt-2"></div>
                                         </div>
                                         <div style="width: 40%; padding-left: 1rem;">
                                             <div>
@@ -80,12 +83,12 @@
                                                     <input type="text" class="form-control" id="updateLink"
                                                         autocomplete="off">
                                                 </div>
-                                                <input type="hidden" id="idEpisode">
-                                                <button class="btn btn-primary" id="saveUpdateLink">Save</button>
-                                                <button class="btn btn-danger" id="deleteLink"
-                                                    data-ms="<%- movie.MainServer %>">
-                                                    Delete
-                                                </button>
+                                                <input type="hidden" id="idLink">
+                                                <div id="linkAction" style="display: none;">
+                                                    <button class="btn btn-primary" id="saveUpdateLink">Save</button>
+                                                    <button class="btn btn-danger" id="deleteLink"> Delete </button>
+                                                </div>
+                                                <button class="btn btn-dark" id="updateHls"> Save </button>
                                             </div>
                                             <hr>
                                             <div>
@@ -97,8 +100,8 @@
                                                     <label for="server" style="line-height: 30px;">Server:</label>
                                                     <select id="addLinkServer" class="w-50 form-control ml-2">
                                                         <% servers.forEach(server=> { %>
-                                                            <option value="<%- server.idServer %>">
-                                                                <%- server.Server %>
+                                                            <option value="<%- server.id %>">
+                                                                <%- server.name %>
                                                             </option>
                                                             <% }); %>
                                                     </select>
@@ -108,7 +111,7 @@
                                                     <input type="text" class="form-control" id="addLink"
                                                         autocomplete="off">
                                                 </div>
-
+                                                <input type="hidden" id="idEpisode">
                                                 <button class="btn btn-success" id="newLink">Add</button>
                                             </div>
                                         </div>
@@ -133,17 +136,10 @@
                                                 <input type="text" class="form-control" id="addEp" autocomplete="off">
                                             </div>
                                             <div class="form-group">
-                                                <label for="Link">Link:</label>
-                                                <input type="text" class="form-control" id="addEpLink"
+                                                <label for="Hls">Hls:</label>
+                                                <input type="text" class="form-control" id="addEpHls"
                                                     autocomplete="off">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="server">Server:</label>
-                                                <input type="text" class="form-control" disabled
-                                                    value="<%- movie.Server %>" autocomplete="off">
-                                            </div>
-
-                                            <input type="hidden" value="<%- movie.idServer %>" id="idMainServer">
                                             <button id="newEpisode" class="btn btn-primary">Add</button>
                                         </div>
                                     </div>
