--- a/src/views/pages/type.ejs
+++ b/src/views/pages/type.ejs
@@ -53,20 +53,20 @@
                                                 <% types.forEach(type=> { %>
                                                     <tr>
                                                         <td>
-                                                            <%- type.idType; %>
+                                                            <%- type.id; %>
                                                         </td>
                                                         <td>
-                                                            <%- type.Type %>
+                                                            <%- type.name %>
                                                         </td>
                                                         <td>
-                                                            <%- type.TypeSlug %>
+                                                            <%- type.slug %>
                                                         </td>
                                                         <td>
                                                             <a href="javascript:void(0)" class="btn btn-primary"
-                                                                data-id="<%- type.idType %>"
+                                                                data-id="<%- type.id %>"
                                                                 onclick="getInforType(this)">Edit</a>
                                                             <a href="javascript:void(0)" class="btn btn-danger"
-                                                                data-id="<%- type.idType %>"
+                                                                data-id="<%- type.id %>"
                                                                 onclick="deleteType(this)">Delete</a>
                                                         </td>
                                                     </tr>
@@ -78,7 +78,7 @@
                             </div>
 
                             <div class="modal fade" id="newTypeModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog" style="max-width: 50%;">
+                                <div class="modal-dialog" style="max-width: 30%;">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">NEW TYPE</h5>
@@ -101,7 +101,7 @@
                             </div>
 
                             <div class="modal fade" id="editTypeModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog" style="max-width: 50%;">
+                                <div class="modal-dialog" style="max-width: 30%;">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">EDIT TYPE</h5>
