--- a/src/views/pages/year.ejs
+++ b/src/views/pages/year.ejs
@@ -53,20 +53,20 @@
                                                 <% years.forEach(year=> { %>
                                                     <tr>
                                                         <td>
-                                                            <%- year.idYear; %>
+                                                            <%- year.id; %>
                                                         </td>
                                                         <td>
-                                                            <%- year.Year %>
+                                                            <%- year.name %>
                                                         </td>
                                                         <td>
-                                                            <%- year.YearSlug %>
+                                                            <%- year.slug %>
                                                         </td>
                                                         <td>
                                                             <a href="javascript:void(0)" class="btn btn-primary"
-                                                                data-id="<%- year.idYear %>"
+                                                                data-id="<%- year.id %>"
                                                                 onclick="getInforYear(this)">Edit</a>
                                                             <a href="javascript:void(0)" class="btn btn-danger"
-                                                                data-id="<%- year.idYear %>"
+                                                                data-id="<%- year.id %>"
                                                                 onclick="deleteYear(this)">Delete</a>
                                                         </td>
                                                     </tr>
@@ -78,7 +78,7 @@
                             </div>
 
                             <div class="modal fade" id="newYearModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog" style="max-width: 50%;">
+                                <div class="modal-dialog" style="max-width: 30%;">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">NEW YEAR</h5>
@@ -101,7 +101,7 @@
                             </div>
 
                             <div class="modal fade" id="editYearModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog" style="max-width: 50%;">
+                                <div class="modal-dialog" style="max-width: 30%;">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">EDIT YEAR</h5>
