--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -16,3 +16,4 @@
     rel="stylesheet">
 <link href="public/css/sb-admin-2.min.css" rel="stylesheet">
 <link href="public/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+<script src="public/js/JWPlayer.js"></script>
