done refactor (using sequelize)

--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -36,17 +36,26 @@
                                     <div id="list-eps" class="overflow-auto" style="height: 550px;">
                                         <% episodes.forEach(episode=> { %>
                                             <a href="javascript:void(0)" class="btn btn-warning my-2 d-block"
-                                                data-episode="<%- episode.episode %>" data-hls="<%- episode.hls %>"
-                                                data-id="<%- episode.id %>"
-                                                data-links='<%- JSON.stringify(episode.Links) %>'
+                                                id="ep-<%- episode.id %>" data-episode="<%- episode.episode %>"
+                                                data-hls="<%- episode.hls %>" data-id="<%- episode.id %>"
                                                 onclick="getFullLink(this)">
                                                 <%- episode.episode %>
                                             </a>
                                             <% }); %>
                                     </div>
-                                    <button class="btn btn-info" data-toggle="modal" data-target="#addEpisode">
-                                        <i class="fa-solid fa-plus"></i>
-                                    </button>
+                                    <div class="mt-2">
+                                        <button class="btn btn-info" data-toggle="modal" data-target="#addEpisode">
+                                            <i class="fa-solid fa-plus"></i>
+                                        </button>
+                                        <button class="btn btn-primary" data-toggle="modal"
+                                            data-target="#addMultiEpisode">
+                                            <i class="fa-solid fa-plus"></i>
+                                            <i class="fa-solid fa-plus"></i>
+                                        </button>
+                                        <button class="btn btn-danger" id="deleteEpisode">
+                                            <i class="fa-solid fa-trash-can"></i>
+                                        </button>
+                                    </div>
                                 </div>
                                 <div style="min-width: 80%; padding-left: 1rem;">
                                     <h3 class="text-center">
@@ -141,6 +150,30 @@
                                                     autocomplete="off">
                                             </div>
                                             <button id="newEpisode" class="btn btn-primary">Add</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="addMultiEpisode" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog" style="max-width: 40%;">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">ADD MULTI EPISODE</h5>
+                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div>
+                                            <div class="form-group">
+                                                <div class="form-group d-flex">
+                                                    <textarea id="multiEp" class="form-control w-100"
+                                                        style="height: 400px; resize: none;"></textarea>
+                                                </div>
+                                            </div>
+                                            <button id="newMultiEpisode" class="btn btn-primary">Add</button>
                                         </div>
                                     </div>
                                 </div>
